src/main/java/jmeos/functions/builder/meos.h

/*****************************************************************************
 *
 * This MobilityDB code is provided under The PostgreSQL License.
 * Copyright (c) 2016-2022, Université libre de Bruxelles and MobilityDB
 * contributors
 *
 * MobilityDB includes portions of PostGIS version 3 source code released
 * under the GNU General Public License (GPLv2 or later).
 * Copyright (c) 2001-2022, PostGIS contributors
 *
 * Permission to use, copy, modify, and distribute this software and its
 * documentation for any purpose, without fee, and without a written
 * agreement is hereby granted, provided that the above copyright notice and
 * this paragraph and the following two paragraphs appear in all copies.
 *
 * IN NO EVENT SHALL UNIVERSITE LIBRE DE BRUXELLES BE LIABLE TO ANY PARTY FOR
 * DIRECT, INDIRECT, SPECIAL, INCIDENTAL, OR CONSEQUENTIAL DAMAGES, INCLUDING
 * LOST PROFITS, ARISING OUT OF THE USE OF THIS SOFTWARE AND ITS DOCUMENTATION,
 * EVEN IF UNIVERSITE LIBRE DE BRUXELLES HAS BEEN ADVISED OF THE POSSIBILITY
 * OF SUCH DAMAGE.
 *
 * UNIVERSITE LIBRE DE BRUXELLES SPECIFICALLY DISCLAIMS ANY WARRANTIES,
 * INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY
 * AND FITNESS FOR A PARTICULAR PURPOSE. THE SOFTWARE PROVIDED HEREUNDER IS ON
 * AN "AS IS" BASIS, AND UNIVERSITE LIBRE DE BRUXELLES HAS NO OBLIGATIONS TO
 * PROVIDE MAINTENANCE, SUPPORT, UPDATES, ENHANCEMENTS, OR MODIFICATIONS. 
 *
 *****************************************************************************/

/**
 * @brief API of the Mobility Engine Open Source (MEOS) library.
 */

//#ifndef __MEOS_H__
//#define __MEOS_H__


//#include <stdbool.h>
//#include <stdint.h>

typedef uintptr_t Datum;
typedef signed short int16;
typedef signed int int32;
typedef unsigned char uint8;
typedef int64 Timestamp;
typedef int64 TimestampTz;
/*****************************************************************************
 * Type definitions
 *****************************************************************************/

/**
 * Structure to represent spans (a.k.a. ranges)
 */
typedef struct
{
  Datum lower;          
  Datum upper;          
  bool lower_inc;       
  bool upper_inc;       
  uint8 spantype;       
  uint8 basetype;       
} Span;
/**
 * Make the Period type as a Span type for facilitating the manipulation of
 * the time dimension
 */
typedef Span Period;
/**
 * Structure to represent timestamp sets
 */
typedef struct
{
  int32 vl_len_;        
  int32 count;          
  Period period;        
  TimestampTz elems[1]; 
} TimestampSet;
/**
 * Structure to represent the common structure of temporal values of
 * any temporal subtype
 */
typedef struct
{
  int32         vl_len_;      
  uint8         temptype;     
  uint8         subtype;      
  int16         flags;        
  
} Temporal;
/**
 * Structure to represent temporal values of instant subtype
 */
typedef struct
{
  int32         vl_len_;      
  uint8         temptype;     
  uint8         subtype;      
  int16         flags;        
  TimestampTz   t;            
  Datum         value;        /**< Base value for types passed by value,
                                   first 8 bytes of the base value for values
                                   passed by reference. The extra bytes
                                   needed are added upon creation. */
  
} TInstant;
/*****************************************************************************
 * Initialization of the MEOS library
 *****************************************************************************/

extern void meos_initialize(const char *tz_str);
extern void meos_finalize(void);
extern Timestamp pg_timestamp_in(const char *str, int32 typmod);
extern char *pg_timestamp_out(Timestamp dt);
extern char *span_out(const Span *s, Datum arg);
extern Span *floatspan_make(double lower, double upper, bool lower_inc, bool upper_inc);
extern Span *intspan_make(int lower, int upper, bool lower_inc, bool upper_inc);
extern Period *timestamp_to_period(TimestampTz t);
extern double distance_timestamp_timestamp(TimestampTz t1, TimestampTz t2);
extern char *temporal_as_mfjson(const Temporal *temp, bool with_bbox, int flags, int precision, char *srs);
extern char *tfloat_out(const Temporal *temp, int maxdd);
extern Temporal *tgeogpoint_in(const char *str);
extern Temporal *tgeompoint_in(const char *str);
extern Temporal *tint_in(const char *str);
extern char *tpoint_as_text(const Temporal *temp, int maxdd);
extern char *tpoint_out(const Temporal *temp, int maxdd);
extern TInstant *tfloatinst_make(double d, TimestampTz t);
extern Temporal *temporal_merge(const Temporal *temp1, const Temporal *temp2);
extern Temporal *temporal_merge_array(Temporal **temparr, int count);
extern int int_bucket(int value, int size, int origin);
extern double float_bucket(double value, double size, double origin);